# KP-WAM-BT

./: partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/Documents/: chnagelog.md  commands.txt
main/inc/: calls.h  defs.h  externVars.h  vars.h
main/src/: BLE.c  SaveRecallNVS.c  analysePacketUart.c  commands.c  hardware.c  mqttRoutines.c  playSound.c  pt6961_p319.c  settings.c  wifi.c
